--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Transfer Learning Video Processing Pipeline - A powerful CLI tool for processing videos and generating step-by-step guides using AI"
 ---
 
 <img
@@ -14,58 +14,78 @@ description: "Welcome to the home of your new documentation"
   alt="Hero Dark"
 />
 
-## Setting up
+## Welcome to Transfer Learning
 
-The first step to world-class documentation is setting up your editing environments.
+Transfer Learning is a powerful CLI tool for processing videos and generating step-by-step guides using AI. This tool can handle both local video files and YouTube videos, extracting key frames and generating detailed guides using OpenAI's GPT-4 Vision API.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Key Features
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Process Local Videos"
+    icon="film"
+    href="/cli/process-video"
   >
-    Customize your docs to your company's colors and brands
+    Extract frames from local video files and analyze their content
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Process YouTube Videos"
+    icon="youtube"
+    href="/cli/process-youtube"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Download and process videos directly from YouTube
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
+    title="Generate Guides"
+    icon="book"
+    href="/cli/generate-guide"
   >
-    Build interactive features and designs to guide your users
+    Create detailed step-by-step guides from processed video frames
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Transcribe Audio"
+    icon="microphone"
+    href="/cli/transcribe"
   >
-    Check out our showcase of our favorite documentation
+    Extract and transcribe audio from videos
   </Card>
 </CardGroup>
+
+## Advanced Capabilities
+
+<CardGroup cols={2}>
+  <Card
+    title="Content Analysis"
+    icon="magnifying-glass"
+    href="/cli/analyze"
+  >
+    Perform detailed analysis of video content using AI
+  </Card>
+  <Card
+    title="Monitoring & Metrics"
+    icon="chart-line"
+    href="/advanced/monitoring"
+  >
+    Track performance and usage metrics
+  </Card>
+  <Card
+    title="Customizable Configuration"
+    icon="gear"
+    href="/advanced/configuration"
+  >
+    Tailor the tool to your specific needs
+  </Card>
+  <Card
+    title="Optimized Performance"
+    icon="bolt"
+    href="/advanced/optimization"
+  >
+    Process videos efficiently with parallel processing
+  </Card>
+</CardGroup>
+
+## Getting Started
+
+To get started with Transfer Learning, check out our [Quickstart Guide](/quickstart) or dive into the [CLI Commands](/cli/overview) documentation.
+
+For developers interested in contributing or extending the tool, visit our [Development Guide](/development).
